<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001bcc"
    tools:context="com.example.tpalny.myapplication.Select_Folders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/My_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:drawableStart="@drawable/google_drive_logo"
            android:padding="10dp"
            android:text="@string/Slideshow"
            android:textColor="#fa08d4d7"
            android:textSize="60sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <TextView
            android:id="@+id/Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_Tom_Palny"
            android:textColor="#ff9500"
            android:textSize="40sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/Instructions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:text="@string/Select_Pics_Folder"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/select_pics_button"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/my_button"
                android:onClick="onPicturesSelectClicked"
                android:text="@string/click_to_choose"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/You_selected"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Selected_Image_Folder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/none_selected"
                android:textColor="@android:color/background_light"
                android:textSize="25sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/clear_pics_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20sp"
                android:layout_weight="1"
                android:background="@drawable/my_button"
                android:onClick="onClearPicturesClicked"
                android:text="@string/clear_selection"
                android:textSize="20sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/Instructions2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="2"
                android:text="@string/select_text"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/select_text_button"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/my_button"
                android:onClick="onTextSelectClicked"
                android:text="@string/click_to_choose"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/You_selected"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Selected_Text_Folder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/none_selected"
                android:textColor="@android:color/background_light"
                android:textSize="25sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/clear_text_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20sp"
                android:layout_weight="1"
                android:background="@drawable/my_button"
                android:onClick="onClearTextClicked"
                android:text="@string/clear_selection"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/pics_duration"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/slideshow_delay"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:inputType="number"
                android:text="@string/min_pic_duration"
                android:textColor="#7dfd60"
                android:textColorHint="#fffafa"
                android:textSize="25sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/start_on_boot"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <ToggleButton
                android:id="@+id/boot_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="30dp"
                android:textColor="#ffffff"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/scrolling_speed"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/text_scroll_speed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:inputType="number"
                android:text="@string/initial_scroll_speed"
                android:textColor="#7dfd60"
                android:textColorHint="#fffafa"
                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/refresh_rate_text"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/text_file_refresh_rate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:inputType="number"
                android:text="@string/initial_refresh_rate"
                android:textColor="#7dfd60"
                android:textColorHint="#fffafa"
                android:textSize="25sp"
                android:textStyle="italic" />


        </LinearLayout>

        <Button
            android:id="@+id/Start_Slideshow_Button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/play"
            android:onClick="onPlaySlideshowClicked"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>

